[gd_scene load_steps=9 format=2]

[ext_resource path="res://game_objects/ui/ui_elements/Enemy_Info/Enemy_Info.gd" type="Script" id=1]
[ext_resource path="res://game_objects/ui/ui_elements/Enemy_Info/Enemy_Health_Bar.tscn" type="PackedScene" id=2]
[ext_resource path="res://game_objects/resources/basic_text.tres" type="DynamicFont" id=3]
[ext_resource path="res://game_objects/ui/ui_elements/bars/Stamina_Bar.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/ui/bars/stamina_bar/enemy_stamina_bar_under.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/bars/stamina_bar/enemy_stamina_bar_over.png" type="Texture" id=6]
[ext_resource path="res://assets/ui/bars/stamina_bar/enemy_stamina_bar_progress.png" type="Texture" id=7]

[sub_resource type="Animation" id=1]
resource_name = "combo"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Combo:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.15 ),
"transitions": PoolRealArray( 2.37841, 0.517633, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 3, 3 ), Vector2( 2, 2 ) ]
}

[node name="Enemy_Info" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1015.0
margin_bottom = -619.0
script = ExtResource( 1 )

[node name="Enemy_Health_Bar" parent="." instance=ExtResource( 2 )]
margin_top = 23.1363
margin_right = -265.0
margin_bottom = -77.8637

[node name="Combo" type="Label" parent="."]
margin_left = 48.1027
margin_top = 54.5298
margin_right = 73.1027
margin_bottom = 66.5298
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 3 )
align = 2

[node name="Name" type="Label" parent="."]
margin_left = 139.0
margin_right = 260.0
margin_bottom = 12.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 3 )
align = 2

[node name="Enemy_Info_Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="Enemy_Stamina_Bar" parent="." instance=ExtResource( 4 )]
margin_top = -5.78409
margin_right = -265.0
margin_bottom = -106.784
rect_scale = Vector2( 2, 2 )

[node name="TextureProgress" parent="Enemy_Stamina_Bar" index="0"]
margin_left = 126.286
margin_top = 26.0284
margin_right = 190.286
margin_bottom = 58.0284
texture_under = ExtResource( 5 )
texture_over = ExtResource( 6 )
texture_progress = ExtResource( 7 )

[node name="Combo_Anim" type="AnimationPlayer" parent="."]
anims/combo = SubResource( 1 )

[connection signal="timeout" from="Enemy_Info_Timer" to="." method="_on_Enemy_Info_Timer_timeout"]

[editable path="Enemy_Stamina_Bar"]
